# hs-interpreter

./: README.md  rg448242-zadanie3.cabal
app/: FromHs.hs  Main.hs  Reduce.hs  SnocList.hs  Syntax.hs  Utils.hs
przyk/: add3.uhs  dwuarg.uhs  even1.uhs  even3.uhs  kio.uhs  ll.uhs  pm3.uhs  pm4.uhs  pm43.uhs  pm44.uhs  pm5.hs  pm5.uhs  run_tests.sh  tree.uhs  tree2.uhs  xskk.uhs
testData/: addinf.uhs  omega.uhs
