cabal-version:      3.4
name:               rg448242-zadanie3
version:            0.1.0.0

executable zadanie3
    main-is:          Main.hs
    ghc-options:      -Wall -Wincomplete-patterns -Werror
    other-modules: FromHs, Reduce, SnocList, Syntax

    build-depends:
        base >=4.15.1.0,
        containers,
        extra,
        haskell-src,
        mtl,
        transformers,

    hs-source-dirs:   app
    default-language: GHC2021
