cabal-version: 3.4
name:          rg448242-zadanie3
version:       0.1.0.0

executable zadanie3
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        FromHs
        Reduce
        SnocList
        Syntax

    default-language: GHC2021
    ghc-options:      -Wall -Wincomplete-patterns -Werror
    build-depends:
        base >=4.15.1.0,
        containers,
        extra,
        haskell-src,
        mtl,
        transformers
